# AI_Studio

./: .env.example  .gitignore  README.md  ai_studio.db  docker-compose.yml  pyproject.toml  requirements.txt
app/agents/: __init__.py  base.py  fact_check.py  image.py  music.py  research.py  reviewer.py  script_writer.py  storyboard.py  voice.py
app/api/: __init__.py  main.py  router.py  schemas.py
app/assets/: __init__.py  asset_manager.py
app/cache/: __init__.py  cache.py
app/cli/: main.py
app/config/: __init__.py  container.py  loader.py  logging.py  providers.yaml  settings.py
app/evaluation/: __init__.py  metrics.py
app/models/: __init__.py  base.py  job.py
app/plugins/: __init__.py  base.py  manager.py
app/providers/: __init__.py  base.py  mock.py  ollama.py  router.py
app/rendering/: __init__.py  image_gen.py  tts.py  video.py
app/services/: __init__.py  composer.py  event_bus.py
app/static/: index.html
app/storage/: __init__.py  connection.py  database.py  (+1 more)
docker/: Dockerfile
docs/: AI_STUDIO_IMPLEMENTATION_PLAN.md  AI_Studio.md  System_Design.md
prompts/: PROMPT_001_PROJECT_BOOTSTRAP.md
scripts/: diag_workflow.py
tests/: conftest.py  test_assets.py  test_composer.py  test_container.py  test_e2e_mock.py  test_event_bus.py  test_fact_check.py  test_image_agent.py  test_interfaces.py  test_music_agent.py  test_plugins.py  test_providers.py  test_research_agent.py  test_reviewer.py  test_script_writer.py  test_storage.py  test_storyboard.py  test_telemetry.py  test_voice_agent.py  test_workflow_persistence.py  test_workflows.py
(+21 files in other folders)
