[project]
name = "ai-studio"
version = "0.1.0"
description = "Modular AI orchestration platform scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.3",
  "langgraph>=0.2.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pyyaml>=6.0.2",
  "loguru>=0.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
